test: adding test for getMethodCallExpr